Task.23 develop UI for createpurchaseorder (#155)
* Cambios

* Añadido mi userName al parametro

* cambios ultimos clase

* Añadido los campos para introducir filtros,, el comprobador de username/userNAME y el meotdo OnInitalizedAsync

* Añadido el state container

* Add Container to Program.cs

* ading inject returncontairen

* Creado el OnInitalized COrrectamente

* Cambios nuevos

* Añadido validaciones en el SearchPurchaseProduct

* añadido errors ="" a Search

* Arreglado el UserName

* Añadido el hideReturningcArt

* commit quitando el authorize para no ver la ventana d elogin

* Esta funcionando

* Creardo El Details RAzor

* Funcionado 2.o

* Añadido el Authorize

* He añadido en el Register.Razor una modificacion para añadir Name, Surname,Addres,AcountCreationDate que es llamado desde el Create User ya que si no a la hora de hacer Register en la Web no teniamos nombre ni nada.

* He añadido la información necesaria en AaplicationUser Para crea un usuario nuevo

* Volvemos a dejar Register como estaba al principio pero tras crea los users validos

* Añadido al NavMenuRazor el PurchaseOrder que se habia modificado por error

* CREADO EL CREATE

* Details Funcionando

* puesto el quantity a >=

* Cambiado los valores automaticos a quant 1 y pau2@gmail

* Añadido el Bizum

* Arrreglado error del create.razor

* Descomentado para ir al details

* Añadido el components

* Arreglado el create.razor

* quitato una validacion de rating que impedia nullable y añadido el id en los dto

* Ajustado el isReturnable para el caso edl AF3

* arreglado para que state contanier funcione bien

* Añadido cambios para crear el DTO en memoria

* Añaiddo IsReturnable y el productID

* Añadido el Creat Funcional

* Validación de NoReturnable

* Arregalado el State contanier para que funcione

* FUNCIONA TODO MENOS EL IR AL DETAILS

* Funcionando todo PORFIN

* ACTUALIZADO EL SWAGGER

* Quitado el swagger

* Arreglado el swagger

* Arreglado fallo inconsistencia en los test mios

*
